<resources>
    <string name="app_name">FoodToGo</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="server_client_id">6703277270811</string>
    <string name="facebook_app_id">862809467815723</string>
    <string name="fb_login_protocol_scheme">fb862809467815723</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_name" translatable="true">FoodToGo! Delivery</string>
    <string name="are_you">FoodToGo!</string>
    <string name="app_name_questions"></string>
    <string name="free">Free</string>
    <string name="fcm_message">FoodToGo !</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="exit_text">Please click BACK again to exit</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_favourites</item>
        <item>@string/nav_item_order_history</item>
        <item>@string/nav_item_your_address</item>
        <item>@string/nav_item_review</item>
        <item>@string/nav_item_rewards</item>
        <item>@string/nav_item_wallet</item>
        <item>@string/nav_item_refer_friend</item>
        <item>@string/nav_item_help</item>
        <item>@string/nav_item_empty</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string name="nav_item_favourites">Favourites</string>
    <string name="nav_item_rewards">My Rewards</string>
    <string name="nav_item_order_history">Order History</string>
    <string name="nav_item_your_address">My Locations</string>
    <string name="nav_item_manage_address">Manage Address</string>
    <string name="nav_item_review">My Reviews</string>
    <string name="nav_item_offers">My Offers</string>
    <string name="nav_item_wallet">My Wallet</string>
    <string name="nav_item_refer_friend">Refer Friend</string>
    <string name="nav_item_help">Support</string>
    <string name="nav_item_signout">Sign Out</string>
    <string name="nav_item_empty">Empty</string>
    <string name="nav_item_about">About</string>
    <string name="otp_verify">OTP Verify</string>
    <string name="verify">Verify</string>
    <string name="please_enter_otp">Please enter the your one time password</string>
    <string name="screen_login">LOGIN</string>
    <string name="edit_user_name">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="social_login">Social Login</string>
    <string name="go_btn">GO</string>
    <string name="ok_btn">OK</string>
    <string name="action_cart">Cart</string>
    <string name="edit_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="warning_empty_email_number">Please enter the email</string>
    <string name="warning_valid_email_number">Please enter the valid email</string>
    <string name="warning_empty_email">Please enter the email</string>
    <string name="warning_empty_password"> Please enter the password</string>
    <string name="warning_invalid_password">Password should contain atleast 6 to 10 characters</string>
    <string name="warning_invalid_email">Please enter the valid email </string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="warning_incorrect_password">Password should contain atleast 6 to 10 characters</string>
    <string name="warning">Info</string>
    <string name="success">Success</string>
    <string name="network_error">Network Error : No Data Received.</string>
    <string name="time_out_error">Connection timeout. please try again</string>
    <string name="server_error">Server error. please try again</string>
    <string name="loading_wait">Loading&#8230; Please wait</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="for_your_info">For your information</string>
    <string name="welcome_text">Welcome to FoodToGo! Delivery!</string>
    <string name="welcome_description">Set your delivery address</string>
    <string name="use_current_text">Use My Current Location</string>
    <string name="select_it_manually">Set your Delivery Location</string>
    <string name="no_wish_list">You have not marked any favourite food.</string>
    <string name="get_start">GET START</string>
    <string name="continue_txt">CONTINUE</string>
    <string name="food">FOOD</string>
    <string name="grocery">GROCERY</string>
    <string name="screen_register">REGISTER</string>
    <string name="edit_name">Name</string>
    <string name="edit_email">Email</string>
    <string name="default_country_code">91</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="warning_empty_mobile_number"> Please enter the mobile number</string>
    <string name="warning_valid_mobile_number"> Please enter the valid mobile number</string>
    <string name="warning_empty_name"> Please enter the name</string>
    <string name="referral_code">Referral Code?</string>
    <string name="referral_code_txt">Referral Code : </string>
    <string name="apply">Apply</string>
    <string name="enter_apply_code">Enter Referral Code</string>
    <string name="otp_msg">OTP sent to your mobile. Please enter otp</string>
    <string name="forgot_your_password">Forgot Your Password ?</string>
    <string name="no_worries">No worries! Enter your email id </string>
    <string name="home_view_all">View All</string>
    <string name="view_all_restaurant">All Restaurants</string>
    <string name="home_restaurants">Restaurants</string>
    <string name="home_location">Home location</string>
    <string name="no_restaurant_found">We could not find any restaurant in your area. Please try with another location.</string>
    <string name="try_new_location">Try New location</string>
    <string name="menu_restaurants">Menu  /  Restaurants  /  Locations</string>
    <string name="new_restaurants">New Restaurant</string>
    <string name="top_restaurants">Top Restaurant</string>
    <string name="promotions">Promotions</string>
    <string name="nearby">Nearby</string>
    <string name="categories">Categories</string>
    <string name="all_restaurant">All Restaurant</string>
    <string name="restaurant_search">Enter dish name</string>
    <string name="only_veg">Only Veg</string>
    <string name="select_subcategory">Select SubCategory</string>
    <string name="plus_add">Add</string>
    <string name="filter">FILTER</string>
    <string name="by_name">By Name</string>
    <string name="ascending_order_ato_z">A - Z</string>
    <string name="descending_order_zto_a">Z - A</string>
    <string name="by_price">By Price</string>
    <string name="high_to_low">High - Low</string>
    <string name="low_to_high">Low - High</string>
    <string name="close_symbol">x</string>
    <string name="description">DESCRIPTION</string>
    <string name="pre_order">PRE-ORDER</string>
    <string name="cancellation_policy">CANCELLATION POLICY</string>
    <string name="cancel_allowed">CANCEL ALLOWED</string>
    <string name="refund_status">REFUND STATUS</string>
    <string name="reviews">REVIEWS</string>
    <string name="preferable_items">Here Are The Preferable Items For Your </string>
    <string name="cancel">Cancel</string>
    <string name="sort_by">Sort By</string>
    <string name="show_item_with">Show Item width</string>
    <string name="top_offers">Top Offers</string>
    <string name="special_offers">Special Offers</string>
    <string name="halal">Halal</string>
    <string name="combo">Combo</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non - Veg</string>
    <string name="both">Both</string>
    <string name="time_of_day">Time of day</string>
    <string name="break_fast">Break Fast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="brunch">Brunch</string>
    <string name="supper">Supper</string>
    <string name="category">Category</string>
    <string name="show_items">Show Items</string>
    <string name="most_preferable_time">Most Preferable Time</string>
    <string name="show_restaurant_with">Show Restaurant with</string>
    <string name="show_restaurant">Show Restaurants</string>
    <string name="cuisines">Cuisines</string>
    <string name="all">All</string>
    <string name="top_offer">Top Offer</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="ratings">Ratings</string>
    <string name="specification">SPECIFICATION</string>
    <string name="exclude">+ </string>
    <string name="special_instruction">Add instruction to chef</string>
    <string name="toppings">Toppings</string>
    <string name="instruction_hint">Add a note (extra sauce, no onions etc...)</string>
    <string name="related_food">RELATED FOOD</string>
    <string name="added_to_cart">Add 1 to cart</string>
    <string name="add">Add </string>
    <string name="to_items">Items</string>
    <string name="to_item">Item</string>
    <string name="view_cart">VIEW CART</string>
    <string name="to_cart">to cart</string>
    <string name="lorel">Sachin Ramesh Tendulkar (/ˌsʌtʃɪn tɛnˈduːlkər/ (About this soundlisten); born 24 April 1973) is a former Indian international cricketer and a former captain of the Indian national team, regarded as one of the greatest batsman of all time.[4] He is the highest run scorer of all time in International cricket. Tendulkar took up cricket at the age of eleven, made his Test debut on 15 November 1989 against Pakistan in Karachi at the age of sixteen, and went on to represent Mumbai domestically and India internationally for close to twenty-four years. He is the only player to have scored one hundred international centuries, the first batsman to score a double century in a ODI, the holder of the record for the most number of runs in both Test and ODI, and the only player to complete more than 30,000 runs in international cricket.[5] He is colloquially known as Little Master or Master Blaster,[6][7][8][9] and often referred to as the God of Cricket by Indian cricket followers.[10][11] In 2001, Sachin Tendulkar became the first batsman to complete 10,000 ODI runs in his 259 innings.[12] In 2002, halfway through his career, Wisden Cricketers Almanack ranked him the second greatest Test batsman of all time, behind Don Bradman, and the second greatest ODI batsman of all time, behind Viv Richards.[13] Later in his career, Tendulkar was a part of the Indian team that won the 2011 World Cup, his first win in six World Cup appearances for India.[14] He had previously been named "Player of the Tournament" at the 2003 edition of the tournament, held in South Africa. In 2013, he was the only Indian cricketer included in an all-time Test World XI named to mark the 150th anniversary of Wisden Cricketers Almanack.</string>
    <string name="no_items">No item found on this restaurant</string>
    <string name="item_not_found">item not found</string>
    <string name="nav_home">Home</string>
    <string name="save">SAVE</string>
    <string name="key_work">Work</string>
    <string name="others">Other</string>
    <string name="enter_address_name">Enter Address Name</string>
    <string name="like_house_shop">Like house,shop etc</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="find_my_location">Find My Location</string>
    <string name="house_building_address">House / Building and Building number</string>
    <string name="info_to_riders">Information to our riders</string>
    <string name="name_of_building">Name of the building, House number or Room number</string>
    <string name="info_riders_hint">Explain for our riders how they can find you</string>
</resources>