<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:background="@color/color_top_bar" />

        <TextView
            android:id="@+id/tv_time_of_day"
            style="@style/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:fontFamily="@font/helvetica_semi_bold"
            android:text="@string/most_preferable_time"
            android:textColor="@color/edit_txt"
            android:textSize="16sp" />


        <CheckBox
            android:id="@+id/break_fast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:fontFamily="@font/helvetica_ultra_light"
            android:text="@string/break_fast"
            android:textColor="@color/edit_txt"
            android:textSize="16sp"
            android:theme="@style/RadioButtonTheme" />


        <CheckBox
            android:id="@+id/lunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:fontFamily="@font/helvetica_ultra_light"
            android:text="@string/lunch"
            android:textColor="@color/edit_txt"
            android:textSize="16sp"
            android:theme="@style/RadioButtonTheme" />


        <CheckBox
            android:id="@+id/dinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:fontFamily="@font/helvetica_ultra_light"
            android:text="@string/dinner"
            android:textColor="@color/edit_txt"
            android:textSize="16sp"
            android:theme="@style/RadioButtonTheme" />

    </LinearLayout>

</LinearLayout>